--- a/angular-developerjob.html
+++ b/angular-developerjob.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Angular Developer</title>
+    <title>Angular Developer | Angular Developer Jobs | Exciting Career Opportunities in Front-End Development | Technoartz</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -15,6 +15,11 @@
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+ 
+    <meta name="description" content="Join our team as an Angular Developer! Utilize your skills in building dynamic, responsive web applications with Angular, TypeScript, and JavaScript. Exciting career opportunities for front-end developers passionate about cutting-edge technology and innovative solutions.">
+    <meta name="keywords" content="Angular Developer Jobs, Angular Developer, Front-End Developer, Angular Jobs, JavaScript, TypeScript, Angular Development, Web Developer, Front-End Development, Responsive Web Applications, UI Developer, Angular Career Opportunities, Tech Jobs, Software Developer Jobs">
+
+
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
     <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
@@ -220,7 +225,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/poonam.jpeg" alt="" />
+                                                        <img src="images/testimonials/poonam.jpeg" alt="Best IT Classes and Training Opportunities - Technoarts Testimonial" />
                                                     </div>
                                                     <h3>Poonam Gore</h3>
                                                     <div class="location">Pune</div>
@@ -235,7 +240,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/komal.jpeg" alt="" />
+                                                        <img src="images/testimonials/komal.jpeg" alt="Best IT Classes and Training Opportunities - Technoarts Testimonial" />
                                                     </div>
                                                     <h3>Komal Kokare</h3>
                                                     <div class="location">Pune</div>
@@ -250,7 +255,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/aparna.jpeg" alt="" />
+                                                        <img src="images/testimonials/aparna.jpeg" alt="Best IT Classes and Training Opportunities - Technoarts Testimonial" />
                                                     </div>
                                                     <h3>Aparna Magar</h3>
                                                     <div class="location">Pune</div>
@@ -269,7 +274,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/diksha.jpeg" alt="" />
+                                                        <img src="images/testimonials/diksha.jpeg" alt="Best IT Classes and Training Opportunities - Technoarts Testimonial"/>
                                                     </div>
                                                     <h3>Diksha Daphal</h3>
                                                     <div class="location">Pune</div>
@@ -285,7 +290,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/kavii.jpeg" alt="" />
+                                                        <img src="images/testimonials/kavii.jpeg" alt="Best IT Classes and Training Opportunities - Technoarts Testimonial" />
                                                     </div>
                                                     <h3>Kavita Randive</h3>
                                                     <div class="location">Pune</div>
