--- a/digital-marketing.html
+++ b/digital-marketing.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>UI Developer</title>
+    <title>Digital Marketing Careers, Exciting Job Opportunities, Technoarts</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -15,6 +15,9 @@
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="description" content="Unlock the power of digital marketing with Technoarts! Explore our comprehensive services, including SEO, social media marketing, and content strategy. Join us to enhance your online presence and drive measurable results for your business.">
+    <meta name="keywords" content="Digital Marketing, SEO, Social Media Marketing, Content Marketing, Online Advertising, Email Marketing, PPC, Brand Strategy, Digital Marketing Services, Marketing Agency, Web Analytics, Digital Strategy, Technoarts">
+
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
     <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
@@ -201,7 +204,7 @@
                                     <li><a>Search Engine Optimization (SEO)</a></li>
                                     <li><a>Social Media Marketing</a></li>
                                     <li><a>Content Marketing</a></li>
-                                    <li><a>Email Marketing</a></li>
+                                    <li><a>Pay-Per-Click (PPC)</a></li>
                                     <!-- <li><a href="#"></a></li>
                                     <li><a href="#"></a></li> -->
                                 </ul>
@@ -218,7 +221,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/poonam.jpeg" alt="" />
+                                                        <img src="images/testimonials/poonam.jpeg" alt="Testimonial for Exceptional Digital Marketing Services and Strategies - Technoarts" />
                                                     </div>
                                                     <h3>Poonam Gore</h3>
                                                     <div class="location"> Pune</div>
@@ -235,7 +238,9 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/komal.jpeg" alt="" />
+                                                        <img src="images/testimonials/komal.jpeg" alt="Testimonial for Remarkable Digital Marketing Strategies and Services - Technoarts"
+
+                                                        />
                                                     </div>
                                                     <h3>Komal Kokare</h3>
                                                     <div class="location">Pune</div>
@@ -250,7 +255,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/aparna.jpeg" alt="" />
+                                                        <img src="images/testimonials/aparna.jpeg" alt="Endorsement for Excellent Digital Marketing Services and Techniques - Technoarts" />
                                                     </div>
                                                     <h3>Aparna Magar</h3>
                                                     <div class="location"> Pune</div>
@@ -266,7 +271,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/diksha.jpeg" alt="" />
+                                                        <img src="images/testimonials/diksha.jpeg" alt="Review Highlighting Outstanding Digital Marketing Services and Strategies - Technoarts" />
                                                     </div>
                                                     <h3> Diksha Daphal</h3>
                                                     <div class="location"> Pune</div>
@@ -281,7 +286,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/kavii.jpeg" alt="" />
+                                                        <img src="images/testimonials/kavii.jpeg" alt="Endorsement for Excellent Digital Marketing Services and Techniques - Technoarts" />
                                                     </div>
                                                     <h3> Kavita Randive</h3>
                                                     <div class="location"> Pune</div>
