--- a/full-stack-developerjob.html
+++ b/full-stack-developerjob.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Full Stack Developer</title>
+    <title>Full Stack Developer Jobs | Exciting Career Opportunities in Web Development | Technoarts</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -15,6 +15,9 @@
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="description" content="Discover exciting Full Stack Developer job opportunities at Technoarts! Join our innovative team to work on dynamic web applications using technologies like JavaScript, React, Node.js, and more. Elevate your career in software development with us!">
+    <meta name="keywords" content="Full Stack Developer, Full Stack Development Jobs, Front-End Developer, Back-End Developer, JavaScript, React, Node.js, Web Development, Software Engineering, RESTful APIs, Responsive Design, UI/UX Design, Tech Jobs, Software Development Careers, Technology Solutions">
+
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
     <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
@@ -220,7 +223,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/poonam.jpeg" alt="" />
+                                                        <img src="images/testimonials/poonam.jpeg" alt="Testimonial for Outstanding Full Stack Developer Training and Opportunities - Technoarts" />
                                                     </div>
                                                     <h3>Poonam Gore</h3>
                                                     <div class="location">Pune</div>
@@ -235,7 +238,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/komal.jpeg" alt="" />
+                                                        <img src="images/testimonials/komal.jpeg" alt="Testimonial for Outstanding Full Stack Developer Training and Opportunities - Technoarts" />
                                                     </div>
                                                     <h3>Komal Kokare</h3>
                                                     <div class="location">Pune</div>
@@ -250,7 +253,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/aparna.jpeg" alt="" />
+                                                        <img src="images/testimonials/aparna.jpeg" alt="Testimonial for Outstanding Full Stack Developer Training and Opportunities - Technoarts" />
                                                     </div>
                                                     <h3>Aparna Magar</h3>
                                                     <div class="location">Pune</div>
@@ -266,7 +269,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/diksha.jpeg" alt="" />
+                                                        <img src="images/testimonials/diksha.jpeg" alt="Testimonial for Outstanding Full Stack Developer Training and Opportunities - Technoarts" />
                                                     </div>
                                                     <h3>Diksha Daphal</h3>
                                                     <div class="location">Pune</div>
@@ -282,7 +285,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/kavii.jpeg" alt="" />
+                                                        <img src="images/testimonials/kavii.jpeg" alt="Testimonial for Outstanding Full Stack Developer Training and Opportunities - Technoarts" />
                                                     </div>
                                                     <h3>Kavita Randive</h3>
                                                     <div class="location">Pune</div>
