--- a/java-developerjob.html
+++ b/java-developerjob.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Java Developer</title>
+    <title>Java Developer | Java Developer Jobs | Exciting Career Opportunities in Software Development | Technoarts</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -15,6 +15,9 @@
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="description" content="Explore exciting Java Developer job opportunities at Technoarts! Join our dynamic team to work on innovative projects using Java, Spring, and Hibernate. Elevate your career in software development and make a significant impact with us!">
+    <meta name="keywords" content="Java Developer Jobs, Java Programming, Software Development, Spring Framework, Hibernate, Backend Development, Java EE, Tech Jobs, Full Stack Development, Web Development Careers, Software Engineering, Java Training, Career Opportunities, Technoarts">
+
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
     <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
@@ -219,7 +222,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/poonam.jpeg" alt="" />
+                                                        <img src="images/testimonials/poonam.jpeg" alt="Testimonial for Exceptional Java Developer Training and Career Opportunities - Technoarts"  />
                                                     </div>
                                                     <h3>Poonam Gore</h3>
                                                     <div class="location"> Pune</div>
@@ -234,7 +237,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/komal.jpeg" alt="" />
+                                                        <img src="images/testimonials/komal.jpeg" alt="Testimonial for Remarkable Java Developer Training and Job Opportunities - Technoarts" />
                                                     </div>
                                                     <h3>Komal Kokare </h3>
                                                     <div class="location">Pune </div>
@@ -249,7 +252,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/aparna.jpeg" alt="" />
+                                                        <img src="images/testimonials/aparna.jpeg" alt="Review of Excellent Java Developer Training and Career Opportunities at Technoarts" />
                                                     </div>
                                                     <h3>Aparna Magar</h3>
                                                     <div class="location">Newyork City</div>
@@ -264,7 +267,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials//diksha.jpeg" alt="" />
+                                                        <img src="images/testimonials//diksha.jpeg" alt="Feedback on Exceptional Java Developer Training and Career Paths - Technoarts" />
                                                     </div>
                                                     <h3>Diksha Daphal</h3>
                                                     <div class="location"> Pune</div>
@@ -279,7 +282,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/kavii.jpeg alt="" />
+                                                        <img src="images/testimonials/kavii.jpeg" alt="Feedback on Exceptional Java Developer Training and Career Paths - Technoarts" />
                                                     </div>
                                                     <h3>Kavita Randive</h3>
                                                     <div class="location"> Pune</div>
