--- a/net-developerjob.html
+++ b/net-developerjob.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="utf-8">
-    <title>.Net Developer</title>
+    <title>.NET Developer Jobs | Exciting Career Opportunities in Software Development | Technoarts</title>
+
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -15,6 +16,9 @@
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="keywords" content="Angular Developer Jobs, Angular Developer, Front-End Developer, Angular Jobs, JavaScript, TypeScript, Angular Development, Web Developer, Front-End Development, Responsive Web Applications, UI Developer, Angular Career Opportunities, Tech Jobs, Software Developer Jobs">
+    <meta name="description" content="Explore exciting Angular Developer job opportunities at Technoarts! Join our team to build dynamic web applications using Angular, TypeScript, and JavaScript. Discover a rewarding career in front-end development with a focus on innovation and user experience.">
+
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
     <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
@@ -218,7 +222,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/poonam.jpeg" alt="" />
+                                                        <img src="images/testimonials/poonam.jpeg" alt="Best .NET Developer Training and Career Opportunities - Technoarts Testimonial" />
                                                     </div>
                                                     <h3>Poonam Gore</h3>
                                                     <div class="location">Pune</div>
@@ -234,7 +238,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/komal.jpeg" alt="" />
+                                                        <img src="images/testimonials/komal.jpeg" alt="Best .NET Developer Training and Career Opportunities - Technoarts Testimonial" />
                                                     </div>
                                                     <h3>Komal Kokare</h3>
                                                     <div class="location">Pune</div>
@@ -249,7 +253,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/aparna.jpeg" alt="" />
+                                                        <img src="images/testimonials/aparna.jpeg" alt="Best .NET Developer Training and Career Opportunities - Technoarts Testimonial"/>
                                                     </div>
                                                     <h3>Aparna Magar</h3>
                                                     <div class="location">Pune</div>
@@ -265,7 +269,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/diksha.jpeg" alt="" />
+                                                        <img src="images/testimonials/diksha.jpeg" alt="Best .NET Developer Training and Career Opportunities - Technoarts Testimonial" />
                                                     </div>
                                                     <h3>Diksha Daphal</h3>
                                                     <div class="location">Pune</div>
@@ -283,7 +287,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/kavii.jpeg" alt="" />
+                                                        <img src="images/testimonials/kavii.jpeg" alt="Best .NET Developer Training and Career Opportunities - Technoarts Testimonial" />
                                                     </div>
                                                     <h3>Kavita Randive</h3>
                                                     <div class="location">Pune</div>
