--- a/python-developerjob.html
+++ b/python-developerjob.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Python Developer</title>
+    <title>Python Developer ,Python Developer Jobs, Backend Development, Innovative Projects, Technoarts</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -15,6 +15,9 @@
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="keywords" content="Python Developer Jobs, Python Programming, Software Development, Backend Development, Django, Flask, Data Science, Machine Learning, Tech Jobs, Full Stack Developer, Web Development Careers, Python Course, Career Opportunities, Technoarts">
+    <meta name="description" content="Explore exciting Python Developer job opportunities at Technoarts! Join our team to work on innovative projects using Python, Django, and machine learning. Elevate your career in software development with us and make an impact!">
+
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
     <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
@@ -218,7 +221,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/poonam.jpeg" alt="" />
+                                                        <img src="images/testimonials/poonam.jpeg"  alt="Testimonial for Excellent Python Developer Training and Career Opportunities - Technoarts" />
                                                     </div>
                                                     <h3>Poonam Gore </h3>
                                                     <div class="location">Pune </div>
@@ -236,7 +239,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/komal.jpeg" alt="" />
+                                                        <img src="images/testimonials/komal.jpeg"  alt="Testimonial for Excellent Python Developer Training and Career Opportunities - Technoarts" />
                                                     </div>
                                                     <h3>Komal Kokare </h3>
                                                     <div class="location"> Pune</div>
@@ -252,7 +255,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/aparna.jpeg" alt="" />
+                                                        <img src="images/testimonials/aparna.jpeg"  alt="Testimonial for Excellent Python Developer Training and Career Opportunities - Technoarts" />
                                                     </div>
                                                     <h3>Aparna Magar</h3>
                                                     <div class="location">Pune </div>
@@ -274,7 +277,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/diksha.jpeg" alt="" />
+                                                        <img src="images/testimonials/diksha.jpeg"  alt="Testimonial for Excellent Python Developer Training and Career Opportunities - Technoarts" />
                                                     </div>
                                                     <h3>Diksha Daphal </h3>
                                                     <div class="location">Pune </div>
@@ -290,7 +293,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/kavii.jpeg" alt="" />
+                                                        <img src="images/testimonials/kavii.jpeg"  alt="Testimonial for Excellent Python Developer Training and Career Opportunities - Technoarts" />
                                                     </div>
                                                     <h3>Kavita Randive  </h3>
                                                     <div class="location">Pune </div>
