--- a/ui-developer.html
+++ b/ui-developer.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>UI Developer</title>
+    <title>UI Developer | Technoartz | Innovative IT Solutions & Expert Training | Best UI Developer Services in Pune</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -15,6 +15,9 @@
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="keywords" content="UI Developer, User Interface Design, Front-End Developer, HTML5, CSS3, JavaScript, Responsive Design, Web Development, UX/UI, Web Design, User Experience, UI Frameworks, Bootstrap, Material Design, UI Components, Cross-Browser Compatibility">
+    <meta name="description" content="Professional UI Developer with expertise in creating intuitive, responsive user interfaces using HTML5, CSS3, JavaScript, and modern frameworks. Specializing in front-end development, UX/UI design, and delivering seamless web experiences for businesses and users.">
+
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
     <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
@@ -221,7 +224,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/poonam.jpeg" alt="" />
+                                                        <img src="images/testimonials/poonam.jpeg" alt="Best training, best experience, best job placement"  />
                                                     </div>
                                                     <h3>Poonam Gore</h3>
                                                     <div class="location">Pune</div>
@@ -243,7 +246,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/komal.jpeg" alt="" />
+                                                        <img src="images/testimonials/komal.jpeg" alt="Best training, best experience, best job placement" />
                                                     </div>
                                                     <h3>Komal Kokare</h3>
                                                     <div class="location">Pune</div>
@@ -262,7 +265,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/aparna.jpeg" alt="" />
+                                                        <img src="images/testimonials/aparna.jpeg" alt="Best training, best experience, best job placement"  />
                                                     </div>
                                                     <h3>Aparna Magar</h3>
                                                     <div class="location">Pune</div>
@@ -277,7 +280,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/diksha.jpeg" alt="" />
+                                                        <img src="images/testimonials/diksha.jpeg" alt="Best training, best experience, best job placement" />
                                                     </div>
                                                     <h3>Diksha Daphal</h3>
                                                     <div class="location">Pune</div>
@@ -293,7 +296,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/kavii.jpeg" alt="" />
+                                                        <img src="images/testimonials/kavii.jpeg" alt="Best training, best experience, best job placement" />
                                                     </div>
                                                     <h3>Kavita Randive</h3>
                                                     <div class="location">Pune</div>
