--- a/react_developerjob.html
+++ b/react_developerjob.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>React Developer</title>
+    <title>React Developer | Professional React Developer Services | Build Dynamic User Interfaces | Technoarts</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -15,6 +15,9 @@
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="description" content="Explore the best React Developer training and career opportunities at Technoarts! Join our expert-led programs to enhance your skills and take your career to the next level in dynamic web development.">
+    <meta name="keywords" content="React Developer Training, React Jobs, Front-End Development, Web Development Careers, React Course, Software Training, Career Opportunities, JavaScript, UI Development, Full Stack Developer, Technoarts, Professional Development, Learning React">
+
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
     <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
@@ -219,7 +222,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/poonam.jpeg" alt="" />
+                                                        <img src="images/testimonials/poonam.jpeg" alt="Best React Developer Training and Career Opportunities - Technoarts Testimonial" />
                                                     </div>
                                                     <h3>Poonam Gore</h3>
                                                     <div class="location"> Pune</div>
@@ -234,7 +237,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/komal.jpeg" alt="" />
+                                                        <img src="images/testimonials/komal.jpeg" alt="Top React Developer Training and Career Development Opportunities - Testimonial from Technoarts" />
                                                     </div>
                                                     <h3>Komal Kokare</h3>
                                                     <div class="location"> Pune</div>
@@ -249,7 +252,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/aparna.jpeg" alt="" />
+                                                        <img src="images/testimonials/aparna.jpeg" alt="Premier Training and Career Opportunities for React Developers - Testimonial by Technoarts" />
                                                     </div>
                                                     <h3>Aparna Magar </h3>
                                                     <div class="location"> Pune</div>
@@ -264,7 +267,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/diksha.jpeg" alt="" />
+                                                        <img src="images/testimonials/diksha.jpeg" alt="Premier Training and Career Opportunities for React Developers - Testimonial by Technoarts" />
                                                     </div>
                                                     <h3>Diksha Daphal </h3>
                                                     <div class="location"> Pune</div>
@@ -283,7 +286,7 @@
                                             <div class="upper-box">
                                                 <div class="upper-inner">
                                                     <div class="image">
-                                                        <img src="images/testimonials/kavii.jpeg" alt="" />
+                                                        <img src="images/testimonials/kavii.jpeg" alt="Exceptional React Developer Training and Career Opportunities - Testimonial at Technoarts" />
                                                     </div>
                                                     <h3>Kavita Randive  </h3>
                                                     <div class="location"> Pune</div>
