--- a/digital_marketingService.html
+++ b/digital_marketingService.html
@@ -26,50 +26,9 @@
     <!-- Preloader -->
     <!-- <div class="preloader"></div> -->
  	
-    <!-- Main Header / Header Style Five-->
-    <header class="main-header header-style-one">
-
-        <!-- Header Top -->
-        <div class="header-top">
-            <div class="auto-container">
-                <div class="top-outer clearfix">
-
-                    <!--Top Left-->
-                    <div class="top-left">
-                        <ul class="links clearfix">
-                            <!--Language-->
-                            <li><a href="mailto:http://info@technoartz.com"><span
-                                        class="icon fa fa-envelope"></span>info@technoartz.com</a></li>
-                            <li><a href="tel:http://+91%208888804265"><span class="icon fa fa-phone"></span><strong>+91
-                                        8888804265</strong> </a></li>
-
-                        </ul>
-                    </div>
-
-                    <!--Top Right-->
-                    <div class="top-right clearfix">
-                        <ul class="clearfix">
-                            <li><a href="https://www.facebook.com/"><i class="fa fa-facebook"
-                                        aria-hidden="true"></i></a></li>
-                            <li><a href="https://www.instagram.com/accounts/login/"><i class="fa fa-instagram"
-                                        aria-hidden="true"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/technoartz"><i class="fa fa-linkedin"
-                                        aria-hidden="true"></i></a></li>
-                            <li><a href="https://www.twitter.com/"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                            </li>
-                            <li><a href="https://www.skype.com/sandipkgadekar_1"><i class="fa fa-skype"
-                                        aria-hidden="true"></i></a></li>
-                            <li><a href="https://www.youtube.com/channel/UCnQw85dOqA0oYzAhVzdg4sg"><i
-                                        class="fa fa-youtube-play" aria-hidden="true"></i></a></li>
-
-                        </ul>
-                    </div>
-
-                </div>
-
-            </div>
-        </div>
-        <!-- Header Top End -->
+    <!-- Main Header-->
+    <div include-html="header.html" id="header"></div>
+    <!--End Main Header -->
 
         <!-- Main Box -->
         <div class="main-box">
