--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Technoartz | Contact</title>
+    <title>Technoartz | Contact | Get in Touch with Technoarts | Contact Us for IT Solutions</title>
     <!-- Stylesheets -->
     <link href="css/bootstrap.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -14,6 +14,9 @@
     <!-- Responsive -->
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+    <meta name="description" content="Contact Technoarts for expert IT services, software development, and professional training. Get in touch with our team to discuss your project needs or career opportunities. We're here to help you achieve success in technology and innovation." />
+    <meta name="keywords" content="Contact Technoarts, IT Services Contact, Software Development, IT Consulting, Professional Training, Tech Support, Career Opportunities, IT Solutions, Contact Information, Get in Touch, Technoarts Support" />
+
     <!--[if lt IE 9]><script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script><![endif]-->
     <!--[if lt IE 9]><script src="js/respond.js"></script><![endif]-->
     <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
